--- a/LojourProperties.Web/Pages/Shared/Components/Footer/Default.cshtml
+++ b/LojourProperties.Web/Pages/Shared/Components/Footer/Default.cshtml
@@ -62,7 +62,7 @@
                         </div>
                     </div>
                     <div class="copyright">
-                        <p>© 2023 LOJOUR PROPERTIES All rights reserved. Developed by <a href="https://www.juray.ng/" target="_blank">JURAY SMART SOLUTIONS</a> </p>
+                        <p>© 2023 LOJOUR PROPERTIES All rights reserved. Developed by <a href="https://www.exwhyzee.ng/" target="_blank">EXWHYZEE TECHNOLOGIES</a> </p>
                     </div>
                     <!-- Newslatter -->
                 </div>
