--- a/LojourProperties.Web/Pages/Shared/Components/HomeSearch/Default.cshtml
+++ b/LojourProperties.Web/Pages/Shared/Components/HomeSearch/Default.cshtml
@@ -1,6 +1,19 @@
 ﻿
+<div class="container">
+    <div class="alert-box-container margin-top-30">
+        <div class="well">
 
-<style>
-   
-</style>
- 
+            <form method="get" asp-page="Property">
+                <div class="row">
+                    <div class="col-md-9 col-xs-12 col-sm-12">
+                        <input placeholder="Property, Location" name="searchString" type="text" class="form-control">
+                    </div>
+
+                    <div class="col-md-3 col-xs-12 col-sm-12">
+                        <input class="btn btn-theme btn-block" style="padding: 12px 52px !important;" value="Submit" type="submit">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
