--- a/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/Create.cshtml
+++ b/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/Create.cshtml
@@ -153,6 +153,11 @@
                         <span asp-validation-for="Property.SortOrder" class="text-danger"></span>
                     </div>
                     <div class="form-group">
+                        <label asp-for="Property.Distress" class="control-label"></label>
+                        <input asp-for="Property.Distress" />
+                        <span asp-validation-for="Property.Distress" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
                         <input type="submit" value="Submit" class="btn btn-primary" />
                         <a asp-page="./Index" class="btn bg-gradient-warning btn-sm" style="float:right;">Back</a>
 
