--- a/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/Edit.cshtml
+++ b/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/Edit.cshtml
@@ -107,9 +107,9 @@
                         <span asp-validation-for="Property.Country" class="text-danger"></span>
                     </div>
                     @* <div class="form-group">
-                        <label asp-for="Property.OperatingRegionId" class="control-label"></label>
-                        <select asp-for="Property.OperatingRegionId" class="form-control" asp-items="ViewBag.OperatingRegionId"></select>
-                        </div>*@
+        <label asp-for="Property.OperatingRegionId" class="control-label"></label>
+        <select asp-for="Property.OperatingRegionId" class="form-control" asp-items="ViewBag.OperatingRegionId"></select>
+        </div>*@
                     <div class="form-group">
                         <label asp-for="Property.PropertyCategoryId" class="control-label"></label>
                         <select asp-for="Property.PropertyCategoryId" class="form-control" asp-items="ViewBag.PropertyCategoryId"></select>
@@ -153,7 +153,11 @@
                         <input asp-for="Property.SortOrder" class="form-control" />
                         <span asp-validation-for="Property.SortOrder" class="text-danger"></span>
                     </div>
-
+                    <div class="form-group">
+                        <label asp-for="Property.Distress" class="control-label"></label>
+                        <input asp-for="Property.Distress" />
+                        <span asp-validation-for="Property.Distress" class="text-danger"></span>
+                    </div>
                     <div class="form-group">
                         <input type="submit" value="Submit" class="btn btn-primary" />
                         <a asp-page="./Index" class="btn bg-gradient-warning btn-sm" style="float:right;">Back</a>
