--- a/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/Create.cshtml
+++ b/LojourProperties.Web/Areas/Admin/Pages/V1/PropertyPage/Create.cshtml
@@ -24,7 +24,12 @@
                         <select asp-for="Property.AgentId" class="form-control" asp-items="ViewBag.AgentId" class="form-control select2 select2-primary js-example-basic-single" data-dropdown-css-class="select2-primary"></select>
                     </div>
 
-
+                    <div class="form-group">
+                        <label asp-for="Property.CityLocationId" class="control-label"></label>
+                        <select asp-for="Property.CityLocationId" class="form-control" asp-items="ViewBag.CityLocationId">
+                            <option value="">Choose Location</option>
+                        </select>
+                    </div>
                     <div class="form-group">
                         <label asp-for="Property.Title" class="control-label"></label>
                         <textarea asp-for="Property.Title" class="form-control"></textarea>
